--- a/index.html
+++ b/index.html
@@ -16,25 +16,19 @@
     <div id="msg"></div>
     </form>
 
-    <div class="tabela">
-        <table>
-            <tr>
+    <div id="myDynamicTable">
+        <table id="tableBody">
+            <tr >
               <th>Codigo</th>
               <th>Cliente</th>
+              <th>Setor</th>
+              <th>Visita</th>
+              <th></th>
               <th>Spaten RGB</th>
               <th>Stella RGB</th>
               <th>Becks RGB</th>
               <th>Soma RGB</th>
               <th>Contagem RGB</th>
-            </tr>
-            <tr>
-              <td id="codigo">        </td>
-              <td id="cliente">     </td>
-              <td id="Spaten">      </td>
-              <td id="Stella">       </td>
-              <td id="Becks">        </td>
-              <td id="Soma">         </td>
-              <td id="Contagem">         </td>
             </tr>
           </table>
 
