--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
     <form id="form">
     <input id="code">
-    <button type="submit"> enviar</button>
+    <button id ="submit" type="submit"> enviar</button>
+    
 
     <div id="msg"></div>
     </form>
-
-    <div id="myDynamicTable">
+    <button onClick="window.location.reload()">Nova consulta</button>
+    <div id="divtable">
         <table id="tableBody">
             <tr >
               <th>Codigo</th>
