--- a/coberCliente.html
+++ b/coberCliente.html
@@ -15,7 +15,7 @@
     <form id="form">
     
     <div class="input">
-        <input class="rounded" placeholder="Digite o cliente" type="number" id="code">
+        <input class="rounded" placeholder="Digite seu setor" type="number" id="code">
 
     </div>
         
