--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header style="align-items: center; justify-content:center">
-        <img style="margin-right: 15px" src="./logo.png" alt="Logo Polartica" srcset="">        
-    </header>
+    <h1 style="display:flex;justify-content: center; padding:0;">TRIO VERDE</h1>
+
+
     <div class="botoes">    
         <button class="btn btn-outline-dark btn-lg" onclick="window.location.href = 'coberSetor.html'">Coberturas por Setor</button>
         <button class="btn btn-outline-dark btn-lg" onclick="window.location.href = 'coberCliente.html'" >Coberturas por Cliente</button>
