--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
 
     <div id="divtable">
         <table class="table table-bordered" id="tableBody">
-            <div class="fixed">
-                <tr >
-                    <th>Codigo</th>
-                    <th>Cliente</th>
-                    <th>Setor</th>
-                    <th>Visita</th>
-                    <th>Segmento</th>
-                    <th>Spaten RGB</th>
-                    <th>Stella RGB</th>
-                    <th>Becks RGB</th>
-                    <th>Soma RGB</th>
-                    <th>Contagem RGB</th>
-                  </tr>
-            </div>
+                <thead>
+                    <tr>
+                        <th>Codigo</th>
+                            <th>Cliente</th>
+                            <th>Setor</th>
+                            <th>Visita</th>
+                            <th>Segmento</th>
+                            <th>Spaten RGB</th>
+                            <th>Stella RGB</th>
+                            <th>Becks RGB</th>
+                            <th>Soma RGB</th>
+                            <th>Contagem RGB</th>
+                      </tr>
+                </thead>
 
           </table>
 
